--- a/timezone/templates/manageproduct/add-product.html
+++ b/timezone/templates/manageproduct/add-product.html
@@ -62,15 +62,15 @@
                     <div class="mb-4">
                         <label class="d-block form-label"><i class="ri-user-heart-line"></i> Gender</label>
                         <div class="form-check form-check-inline">
-                            <input type="radio" id="gender-male" name="gender" class="form-check-input shadow-sm" value="M" required="">
+                            <input type="radio" id="gender-male" name="gender" class="form-check-input shadow-sm" value="Male" required="">
                             <label class="form-check-label" for="gender-male">Male</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input type="radio" id="gender-female" name="gender" class="form-check-input shadow-sm" value="F" required="">
+                            <input type="radio" id="gender-female" name="gender" class="form-check-input shadow-sm" value="Female" required="">
                             <label class="form-check-label" for="gender-female">Female</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input type="radio" id="gender-unisexual" name="gender" class="form-check-input shadow-sm" value="U" required="">
+                            <input type="radio" id="gender-unisexual" name="gender" class="form-check-input shadow-sm" value="Unisexual" required="">
                             <label class="form-check-label" for="gender-unisexual">Unisexual</label>
                         </div>
                         <div class="invalid-feedback" id="gender-error-message"></div>
