--- a/timezone/templates/manageproduct/edit_varient.html
+++ b/timezone/templates/manageproduct/edit_varient.html
@@ -15,7 +15,7 @@
                 <div class="form-floating form-floating-outline">
                   <input type="number" id="form-repeater-1-2" class="form-control" 
                   placeholder="Enter Quantity" name="quantity" 
-                  min="1" step="1"  >
+                  min="1" step="1" value="{{obj.quantity}}"  >
                   <label for="form-repeater-1-2" >{{obj.quantity}}</label>
                 </div>
               </div>
