--- a/timezone/templates/login/index.html
+++ b/timezone/templates/login/index.html
@@ -152,7 +152,7 @@
 
                 <div class="row justify-content-center">
                     <div class="room-btn pt-70">
-                        <a href="catagori.html" class="btn view-btn1">View More Products</a>
+                        <a href="{% url 'products:shop' %}" class="btn view-btn1">View More Products</a>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                         <div class="watch-details mb-40">
                             <h2>Watch of Choice</h2>
                             <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-                            <a href="shop.html" class="btn">Show Watches</a>
+                            <a href="{% url 'products:shop' %}" class="btn">Show Watches</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-10">
@@ -186,7 +186,7 @@
                         <div class="watch-details mb-40">
                             <h2>Watch of Choice</h2>
                             <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-                            <a href="shop.html" class="btn">Show Watches</a>
+                            <a href="{% url 'products:shop' %}" class="btn">Show Watches</a>
                         </div>
                     </div>
                 </div>
