--- a/timezone/templates/manageproduct/colours.html
+++ b/timezone/templates/manageproduct/colours.html
@@ -1,6 +1,13 @@
 {% extends 'base/admin_base.html' %}
 {% block content %}
 <div class="container-xxl flex-grow-1 container-p-y">
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-danger ">
+        {{message}}
+    </div>
+    {% endfor %}
+    {% endif %}
     <div class="card">
         <h5 class="card-header">Color</h5>
         <div class="table-responsive text-nowrap">
