--- a/timezone/templates/base/user_base.html
+++ b/timezone/templates/base/user_base.html
@@ -54,9 +54,9 @@
                                 <ul id="navigation">  
                                     <li><a href="{% url 'login:home' %}">Home</a></li>
                                     <li><a href="{% url 'products:shop' %}">shop</a></li>
-                                    <li><a href="about.html">about</a></li>
-                                    <li><a href="blog.html">wishlist</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="#">about</a></li>
+                                    <li><a href="{% url 'cart:wishlist' %}">wishlist</a></li>
+                                    <li><a href="#">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
