--- a/timezone/templates/user-side/profile.html
+++ b/timezone/templates/user-side/profile.html
@@ -101,7 +101,7 @@
                 <p><strong>Email ID:</strong> {{ user.email }}</p>
                 <p><strong>Gender:</strong> {{ user_profile.gender }}</p>
                 <p><strong>Location:</strong> {{ user_profile.location }}</p>
-                <p><strong>State:</strong> {{ user_profile.state }}</p>
+                <p><strong>State:</strong> {{ user_profile.State }}</p>
                 <p><strong>Username:</strong> {{ user.username }}</p>
                 <a href="{% url 'user:edit_profile' %}" class="btn btn-edit mt-3">Edit</a>
             </div>
