--- a/timezone/templates/user-side/edit_profile.html
+++ b/timezone/templates/user-side/edit_profile.html
@@ -78,15 +78,22 @@
         <div class="col-lg-9 col-md-8 col-sm-12">
             <div class="profile-details">
                 <h4>Edit Profile Details</h4>
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-danger">
+                    {{message}}
+                </div>
+                {%endfor%}
+                {%endif%}
                 <form method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="first_name">First Name:</label>
-                        <input type="text" class="form-control" value="{{user.first_name}}" name="firstname" id="first_name" placeholder="{{user.first_name}}">
+                        <label for="first_name">First Name: {{user.first_name}}</label>
+                        <input type="text" class="form-control" value="{{user.first_name}}" name="firstname" id="first_name">
                     </div>
                     <div class="form-group">
-                        <label for="mobile_number">Mobile Number:</label>
-                        <input type="number" class="form-control" id="mobile_number" value="{{user_profile.mobile}}" name="phone" placeholder="{{user_profile.mobile}}">
+                        <label for="mobile_number">Mobile Number: {{user_profile.mobile}}</label>
+                        <input type="number" class="form-control" id="mobile_number" value="{{user_profile.mobile}}" name="phone">
                     </div>
                     <div class="form-group">
                         <label for="gender">Gender:</label>
@@ -99,15 +106,18 @@
                     </div>
                     <div class="form-group">
                         <label for="location">Location:</label>
-                        <input type="text" class="form-control" id="location" value="{{user_profile.location}}" name="location" placeholder="{{user_profile.location}}">
+                        <input type="text" class="form-control" id="location" name="location" 
+                               placeholder="{% if user_profile.location %}{{ user_profile.location }}{% endif %}">
                     </div>
                     <div class="form-group">
                         <label for="state">State:</label>
-                        <input type="text" class="form-control" name="state" id="state" value="{{user_profile.State}}" placeholder="{{user_profile.State}}">
+                        <input type="text" class="form-control" name="state" id="state" value="{{user_profile.State}}" 
+                               placeholder="{% if user_profile.State %}{{ user_profile.State }}{% endif %}">
                     </div>
                     <div class="form-group">
-                        <label for="username">Username:</label>
-                        <input type="text" class="form-control" id="username" value="{{user.username}}" name="username" placeholder="{{user.username}}">
+                        <label for="username">Username: {{user.username}}</label>
+                        <input type="text" class="form-control" id="username" value="{{user.username}}" name="username" 
+                               placeholder="{% if user.username %}{{ user.username }}{% endif %}">
                     </div>
                     <button type="submit" class="btn btn-custom">Save Changes</button>
                 </form>
