--- a/timezone/templates/manageproduct/add_varient.html
+++ b/timezone/templates/manageproduct/add_varient.html
@@ -42,22 +42,22 @@
                 </div>
                 <div class="card-body">
                     <div class="mb-3">
-                        <input type="file" id="image" name="image" accept="image/" required>
+                      <input type="file" id="image" name="image" accept="image/png, image/jpeg, image/jpg, image/gif" required>
                     </div>
                 </div>
                 <div class="card-body">
                   <div class="mb-3">
-                      <input type="file" id="image" name="image_1" accept="image/" required>
+                      <input type="file" id="image" name="image_1" accept="image/png, image/jpeg, image/jpg, image/gif"required>
                   </div>
               </div>
               <div class="card-body">
                 <div class="mb-3">
-                    <input type="file" id="image" name="image_2" accept="image/" required>
+                    <input type="file" id="image" name="image_2" accept="image/png, image/jpeg, image/jpg, image/gif" required>
                 </div>
             </div>
             <div class="card-body">
               <div class="mb-3">
-                  <input type="file" id="image" name="image_3" accept="image/" required>
+                  <input type="file" id="image" name="image_3" accept="image/png, image/jpeg, image/jpg, image/gif" required>
               </div>
           </div>
             </div>
